# CrabShell

./: CMakeLists.txt  Config.cpp  Config.h  CrabShell.cpp  History.cpp  History.h  LuaInterface.cpp  LuaInterface.h  README.md  SConstruct  ShellData.h  Utilities.cpp  Utilities.h
SampleConfig/Plugins/: echo.lua
